--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,7 @@
+include ':p0061_1layout'
+include ':p0061layout'
+include ':p0061'
+include ':p0051layoutfiles'
 include ':p0180constraintlayoutintro'
 include ':p0041basicviews'
 include ':p0031firstproject'
